service/deploy/k8s/smash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smash
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  labels:
    io.kompose.service: smash
spec:
  ports:
   - name: "80"
     port: 80
     targetPort: 8282
  selector:
    io.kompose.service: smash
